# Live2D-AI-Assistant

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  _template.py  dev.py  pyproject.toml
backend/: _template.py  app.py  pyproject.toml
backend/api/: _template.py  auth.py  characters.py  deps.py  embed.py  live2d_models.py  websocket_handler.py
backend/conversations/: _template.py  conversation_handler.py  single_conversation.py
backend/core/: _template.py  audio_payload.py  live2d_model.py  service_context.py  settings.py
backend/core/agent/: agent_factory.py  agent_interface.py  basic_agent.py
backend/core/asr/: asr_factory.py  asr_interface.py
backend/core/mcp/: __init__.py  server_registry.py
backend/core/skills/: loader.py
backend/core/tts/: _template.py  tts_factory.py  tts_interface.py
backend/db/: _template.py  db.py  models.py  seed.py
backend/db/schemas/: _template.py  character.py  chat.py  embed.py  live2d_model.py  serializers.py  ws_messages.py
backend/tests/: test_api.py  test_seed.py  test_single_conversation.py  test_static_files.py
config/: conf.example.yaml  live2d_catalog.json
desktop/: README.md  main.js  package.json
docs/: live2d模型来源.md
frontend/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/embed/: index.html
frontend/src/: App.vue  env.d.ts  style.css
frontend/src/api/: characters.ts  chat.ts  embed.ts  index.ts  (+1 more)
live2d-models/: README.md
prompts/utils/: live2d_expression_prompt.txt
scripts/: link_olv_models.py
(+32 files in other folders)
