[project]
name = "live2d-ai-assistant"
version = "0.1.0"
description = "Customizable Live2D AI assistant platform with embed and desktop pet support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlmodel>=0.0.22",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "openai>=1.55.0",
  "python-multipart>=0.0.12",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.1",
  "edge-tts>=6.1.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["backend/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
